<resources>
    <string name="app_name" translatable="false">MediaKey</string>
    <string name="MainActivity_layout_Button_openSettings">Open settings</string>
    <string name="MainActivity_layout_Button_hibernatePc">Hibernate PC</string>
    <string name="MainActivity_layout_Button_volumeDown">Volume down</string>
    <string name="MainActivity_layout_Button_previous">Previous</string>
    <string name="MainActivity_layout_Button_playPause">Play/Pause</string>
    <string name="MainActivity_layout_Button_next">Next</string>
    <string name="MainActivity_layout_Button_volumeUp">Volume up</string>
    <string name="MainActivity_layout_Text_currentVolume_unknown" translatable="false">\???%</string>
    <string name="MainActivity_layout_Text_currentSong_unknown">Loading…</string>
    <string name="MainActivity_layout_Image_albumCover">Album cover</string>
    <string name="title_activity_settings">Settings</string>
    <string name="SettingsActivity_prefs_serverUrl_summary">With port</string>
    <string name="SettingsActivity_prefs_serverUrl_title">Server URL</string>
    <string name="SettingsActivity_prefs_serverAccessToken_summary">Token to access remote server with</string>
    <string name="SettingsActivity_prefs_serverAccessToken_title">Access token</string>
    <string name="SettingsActivity_prefs_connectivity_title">Connectivity</string>
    <string name="MainActivity_requestFailure_exception">Request failed with exception:\n</string>
    <string name="MainActivity_requestFailure_json">Got invalid response</string>
    <string name="MainActivity_layout_Text_currentSong_nothing">Nothing playing</string>
    <string name="MainActivity_hibernate_confirmation">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
